Change src link

--- a/__fixtures__/expected.html
+++ b/__fixtures__/expected.html
@@ -6,5 +6,6 @@
 <body>
 <meta name="description" content="Обучение языкам программирования онлайн, получи востребованную профессию в IT.">
 <link rel="canonical" href="https://ru.hexlet.io/courses">
+<img src="https://cdn2.hexlet.io/assets/logo_ru-495f05850e0095ea722a2b583565d492719579c02b0ce61d924e4f895fabf781.svg" />
 </body>
 </html>
